--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,11 @@ plugins {
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '16'
+sourceCompatibility = '11'
+
+repositories {
+    mavenCentral()
+}
 
 repositories {
     mavenCentral()
@@ -25,14 +29,18 @@ dependencies {
     implementation 'org.springframework.security:spring-security-web:5.3.9.RELEASE'
     implementation 'org.springframework.security:spring-security-config:5.3.9.RELEASE'
     implementation 'org.springframework.security:spring-security-taglibs:5.3.9.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
+    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
 
 
     implementation 'org.projectlombok:lombok:1.18.18'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:5.5.1'
-    runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.5.3'
+    runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.5.4'
+    runtimeOnly 'mysql:mysql-connector-java'
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.19'
 
 }
 
