--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 server.port=8000
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-
+server.tomcat.additional-tld-skip-patterns=*.jar
 spring.mvc.static-path-pattern=/static/**
 
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.generate-ddl=false
+spring.datasource.url=jdbc:mysql://3.37.243.127:3306/nomal_site?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=reg
+spring.datasource.password=reg09110316
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.generate-ddl=false
 spring.jpa.database=oracle
 logging.level.org.hiberate=debug
 spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
