--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ server.port=8000
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 server.tomcat.additional-tld-skip-patterns=*.jar
+server.ssl.key-store=eg-keystore.p12
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store-password=reg09110316
+server.ssl.key-alias=reg-keystore
+
 spring.mvc.static-path-pattern=/static/**
 
 spring.datasource.url=jdbc:mysql://3.37.243.127:3306/nomal_site?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
