--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,6 @@ repositories {
 
 dependencies {
     implementation 'com.google.cloud:google-cloud-vision:1.68.0'
-    implementation 'com.h2database:h2:1.4.200'
     implementation 'javax.servlet:jstl:1.2'
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.50'
@@ -34,8 +33,7 @@ dependencies {
 
     implementation 'org.projectlombok:lombok:1.18.18'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.9'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.6'
+    implementation 'commons-fileupload:commons-fileupload:1.4'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test:5.5.1'
     runtimeOnly 'org.springframework.boot:spring-boot-devtools:2.5.4'
