--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,14 +9,17 @@ server.ssl.key-alias=reg-keystore
 
 spring.mvc.static-path-pattern=/static/**
 
+spring.h2.console.enabled=false
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
 spring.datasource.url=jdbc:mysql://3.37.243.127:3306/nomal_site?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=reg
 spring.datasource.password=reg09110316
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.generate-ddl=false
-spring.jpa.database=oracle
 logging.level.org.hiberate=debug
-spring.jpa.database-platform=org.hibernate.dialect.Oracle10gDialect
