--- a/build.gradle
+++ b/build.gradle
@@ -12,16 +12,13 @@ repositories {
     mavenCentral()
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
     implementation 'com.google.cloud:google-cloud-vision:1.68.0'
-    implementation 'javax.servlet:jstl:1.2'
-    implementation 'org.springframework.boot:spring-boot-starter'
-    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.50'
+    implementation 'org.springframework.boot:spring-boot-starter:2.5.4'
 
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.52'
+    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+    implementation 'jstl:jstl:1.2'
 
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.security:spring-security-core:5.3.9.RELEASE'
@@ -29,7 +26,6 @@ dependencies {
     implementation 'org.springframework.security:spring-security-config:5.3.9.RELEASE'
     implementation 'org.springframework.security:spring-security-taglibs:5.3.9.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.4'
-
 
     implementation 'org.projectlombok:lombok:1.18.18'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
