--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.tomcat.additional-tld-skip-patterns=*.jar
 #server.ssl.key-store-password=reg09110316
 #server.ssl.key-alias=reg-keystore
 
-spring.mvc.static-path-pattern=/static/**
+#spring.mvc.static-path-pattern=/static/**
 
 spring.h2.console.enabled=false
 spring.jpa.database=mysql
