--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,6 @@ server.port=8000
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 server.tomcat.additional-tld-skip-patterns=*.jar
-#server.ssl.key-store=eg-keystore.p12
-#server.ssl.key-store-type=PKCS12
-#server.ssl.key-store-password=reg09110316
-#server.ssl.key-alias=reg-keystore
-
-#spring.mvc.static-path-pattern=/static/**
 
 spring.h2.console.enabled=false
 spring.jpa.database=mysql
@@ -23,3 +17,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.generate-ddl=false
 logging.level.org.hiberate=debug
+logging.config=classpath:log4j.properties
+
+jasypt.encryptor.bean=jasyptStringEncryptor
