--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,12 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
+}
+
 dependencies {
     implementation 'com.google.cloud:google-cloud-vision:1.68.0'
     implementation 'org.springframework.boot:spring-boot-starter:2.5.4'
@@ -37,6 +43,8 @@ dependencies {
 
     runtimeOnly 'mysql:mysql-connector-java'
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.26'
+
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'   // log4j2
 }
 
 test {
